--- a/src/app/features/thirteenth-month/thirteenth-month.component.scss
+++ b/src/app/features/thirteenth-month/thirteenth-month.component.scss
@@ -59,7 +59,7 @@
 @media (min-width: 960px) {
     .calc-layout {
         display: grid;
-        grid-template-columns: 350px 1fr;
+        grid-template-columns: 440px 1fr;
         align-items: start;
     }
 }
@@ -90,6 +90,12 @@
 
     mat-button-toggle {
         width: 50%;
+        
+        /* Ensure labels don't get cut off by reducing internal padding */
+        ::ng-deep .mat-button-toggle-label-content {
+            padding: 0 12px !important;
+            font-size: 14px;
+        }
     }
 
     @media (max-width: 400px) {
